--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
     min-width: 250px;
     height: 50px;
     background-color: rgb(22,22,22);
-    border-radius: 0.2rem;
+    border-radius: 2rem;
     border-top: 1px solid rgba(255,255,255,0.03);
     border-bottom: 1px solid rgba(255,255,255,0.01);
     display: flex;
@@ -41,6 +41,7 @@ body {
     color: white;
     font-size: 1.5rem;
     font-weight: 400;
+    box-shadow: 0 4px 0 black;
 }
 
 /* INPUT BUTTON */
