--- a/styles.css
+++ b/styles.css
@@ -35,13 +35,42 @@ body {
     border-radius: 2rem;
     border-top: 1px solid rgba(255,255,255,0.03);
     border-bottom: 1px solid rgba(255,255,255,0.01);
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr auto;
     align-items: center;
+    padding-inline: 20px 6.5px;
+    column-gap: 15px;
     color: white;
     font-size: 1.5rem;
     font-weight: 400;
     box-shadow: 0 4px 0 black;
+}
+
+.copy-button {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(30,30,30);
+    cursor: pointer;
+}
+
+.copy-button-svg,
+.copy-button-svg-copied {
+    width: 18px;
+    height: 18px;
+    fill: white;
+}
+
+.copy-button-svg-copied {
+    display: none;
+}
+
+.copy-button:hover {
+    background-color: rgb(35,35,35);
 }
 
 /* INPUT BUTTON */
