--- a/styles.css
+++ b/styles.css
@@ -29,21 +29,27 @@ body {
 /* OUTPUT */
 
 .output {
-    min-width: 250px;
+    min-width: 330px;
     height: 50px;
     background-color: rgb(22,22,22);
     border-radius: 2rem;
     border-top: 1px solid rgba(255,255,255,0.03);
     border-bottom: 1px solid rgba(255,255,255,0.01);
     display: grid;
-    grid-template-columns: 1fr auto;
+    grid-template-columns: 1fr auto auto;
     align-items: center;
     padding-inline: 20px 6.5px;
-    column-gap: 15px;
+    column-gap: 6.5px;
     color: white;
     font-size: 1.5rem;
     font-weight: 400;
     box-shadow: 0 4px 0 black;
+}
+
+.output-divider {
+    height: 80%;
+    border: 0;
+    border-left: 1px solid rgba(255,255,255,0.05);
 }
 
 .copy-button {
