--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,13 @@ body {
     background-color: rgb(16,16,16);
 }
 
+/* POP UP MESSAGE */
+
+.pop-up-message {
+    position: fixed;
+    background-color: rgb(40,40,40);
+}
+
 /* CONTAINER */
 
 .container {
