--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,34 @@ body {
 
 .pop-up-message {
     position: fixed;
-    background-color: rgb(40,40,40);
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgb(35,35,35);
+    display: flex;
+    align-items: center;
+    column-gap: 8px;
+    padding: 8px 12px;
+    border-radius: 5rem;
+    border-top: 1px solid rgba(255,255,255,0.05);
+    border-bottom: 1px solid rgba(255,255,255,0.02);
+}
+
+.pop-up-message-svg {
+    color: rgb(255, 89, 0);
+    width: 20px;
+    height: 20px;
+    animation: 10s infinite pop-message-svg-animation;
+}
+
+@keyframes pop-message-svg-animation {
+    to{transform: rotateZ(360deg);}
+    to{transform: rotateZ(360deg);}
+}
+
+.pop-up-message-itself {
+    color: white;
+    font-weight: 300;
 }
 
 /* CONTAINER */
