--- a/styles.css
+++ b/styles.css
@@ -145,3 +145,32 @@ body {
     box-shadow: 0 0 0 black;
     border-bottom: 1px solid rgba(255,255,255,0.02);
 }
+
+/* COPIED PASSWORDS CONTAINER */
+
+.all-the-copied-passwords-container {
+    position: fixed;
+    bottom: 0;
+    right: 10px;
+    width: 300px;
+    height: 400px;
+    border: 1px solid rgba(255,255,255,0.05);
+    border-radius: 1rem 1rem 0 0;
+    display: grid;
+    grid-template-rows: auto 1fr;
+    overflow: hidden;
+}
+
+/* COPIED PASSWORDS CONTAINER TOP */
+
+.all-the-copied-passwords-container-top {
+    background-color: rgb(25,25,25);
+    height: 40px;
+    border-bottom: 1px solid rgba(255,255,255,0.03);
+}
+
+/* COPIED PASSWORDS CONTAINER BOTTOM */
+
+.all-the-copied-passwords-container-bottom {
+    background-color: rgb(18,18,18);
+}
