--- a/styles.css
+++ b/styles.css
@@ -167,6 +167,37 @@ body {
     background-color: rgb(25,25,25);
     height: 40px;
     border-bottom: 1px solid rgba(255,255,255,0.03);
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+    padding-inline: 10px;
+}
+
+.all-the-copied-passwords-container-top-button {
+    width: 25px;
+    height: 25px;
+    border-radius: 2rem;
+    border: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(28,28,28);
+    border: 1px solid rgba(255,255,255,0.04);
+    cursor: pointer;
+}
+
+.all-the-copied-passwords-container-top-button-svg {
+    width: 15px;
+    height: 15px;
+    color: white;
+}
+
+.all-the-copied-passwords-container-top-button:hover {
+    background-color: rgb(32,32,32);
+}
+
+.all-the-copied-passwords-container-top-text {
+    text-align: center;
 }
 
 /* COPIED PASSWORDS CONTAINER BOTTOM */
