--- a/styles.css
+++ b/styles.css
@@ -155,10 +155,11 @@ body {
     width: 300px;
     height: 400px;
     border: 1px solid rgba(255,255,255,0.05);
-    border-radius: 1rem 1rem 0 0;
+    border-radius: 0.5rem 0.5rem 0 0;
     display: grid;
     grid-template-rows: auto 1fr;
     overflow: hidden;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     transition: bottom 300ms;
 }
 
