--- a/styles.css
+++ b/styles.css
@@ -222,6 +222,14 @@ body {
     row-gap: 5px;
 }
 
+.all-the-copied-passwords-container-bottom::-webkit-scrollbar {
+    width: 1px;
+}
+
+.all-the-copied-passwords-container-bottom::-webkit-scrollbar-thumb {
+    background-color: rgb(77, 77, 77);
+}
+
 .copied-password-itself {
     background-color: rgb(24, 24, 24);
     padding: 5px 15px;
